5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1638_2728.log
== SUBMITION (2019-04-13 13:22:36) 
-- CODE:
percuso = float(input("percuso:"))
carro = input("tipo de carro :")

if ( carro.upper() == "A") :
	a = percuso / 8
	print( round(a, 2)
else:
	b = percuso/12
	print(round(b, 2))
-- EXECUTION TIME:
0.194903
-- ERROR:
  File "/home/codebench/codes/1638/2728/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 13:22:45) 
-- CODE:
percuso = float(input("percuso:"))
carro = input("tipo de carro :")

if ( carro.upper() == "A") :
	a = percuso / 8
	print( round(a, 2)
else:
	b = percuso/12
	print(round(b, 2))
-- EXECUTION TIME:
0.141912
-- ERROR:
  File "/home/codebench/codes/1638/2728/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:22:54) 
-- CODE:
percuso = float(input("percuso:"))
carro = input("tipo de carro :")

if ( carro.upper() == "A") :
	a = percuso / 8
	print( round(a, 2)
else:
	b = percuso/12
	print(round(b, 2))
-- EXECUTION TIME:
0.118249
-- ERROR:
  File "/home/codebench/codes/1638/2728/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:22:58) 
-- CODE:
percuso = float(input("percuso:"))
carro = input("tipo de carro :")

if ( carro.upper() == "A") :
	a = percuso / 8
	print( round(a, 2)
else:
	b = percuso/12
	print(round(b, 2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:23:31) 
-- CODE:
percuso = float(input("percuso:"))
carro = input("tipo de carro :")

if ( carro.upper() == "A") :
	a = percuso / 8
	print( round(a, 2)
else:
	(carro.upper() == "B")
	b = percuso/12
	print(round(b, 2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:23:49) 
-- CODE:
percuso = float(input("percuso:"))
carro = input("tipo de carro :")

if ( carro.upper() == "A") :
	a = percuso / 8
	print( round(a, 2))
else:
	b = percuso/12
	print(round(b, 2))
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:24:02) 
-- CODE:
percuso = float(input("percuso:"))
carro = input("tipo de carro :")

if ( carro.upper() == "A") :
	a = percuso / 8
	print( round(a, 2))
else:
	b = percuso/12
	print(round(b, 2))
-- EXECUTION TIME:
0.14875
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
